--- a/lecture_01/worksheet_01.ipynb
+++ b/lecture_01/worksheet_01.ipynb
@@ -199,10 +199,11 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "d) let's say you have a copy of a repo in GitHub but that repo changes, does your copy change too?"
+    "d) let's say you have a copy of a repo in GitHub but that repo changes, does your copy on your laptop change too? why / why not?"
    ]
   },
   {
@@ -223,10 +224,11 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "f) how would you make your copy change so that it has the most up-to-date version of the repo it is copied from?"
+    "f) how would you make your local and remote copies change so that they have the most up-to-date version of the repo they are copied from?"
    ]
   },
   {
