update 8 Queen alg for lecture 02

--- a/lecture_03/worksheet_03.ipynb
+++ b/lecture_03/worksheet_03.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Haoxiang Huo\n",
+    "UID: U13668934\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -26,7 +26,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "testable and falsifiable. A knowledge is testable prediction and both positive and negative example can falsify hypothesis, however."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +40,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "negative examples since thus we can find where our hypothesis not follow the underlying rule. Otherwise trying positive examples can only get confirmation."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +54,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "B\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,7 +84,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "C, a negative example :{1,2,3}"
+   ]
   },
   {
    "attachments": {},
@@ -91,7 +99,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. ask who the model is intended for and what model is used \n",
+    "(Q: Is it just the general trend that is important of the exact predictions that are important? /  Is this a problem that needs predictive tools to solve?)\n",
+    "2. data processing \n",
+    "(Q: what to do with missing/ inconsistent data? / what data is valid and should be used or not in this task? / what assumption should be made given transformation of the data?)\n",
+    "3. exploration of data \n",
+    "(Q: describe, contextualize, and data visualization / check if imbalance of data exist? what factor is related for what you try to predict? ect)\n",
+    "4. extract features \n",
+    "(Q: what other feature can be extracted? / should we transform existing feature? / is current feature from dataset the best feature for the task? etc)\n",
+    "5. create model \n",
+    "(Q: are ur model easy to explain? / it is all about data, not model / explain why your model fail if occur? )"
+   ]
   },
   {
    "attachments": {},
@@ -109,7 +128,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "record example: {name, age, balance}, etc\n",
+    "graph example: adjacency Matrix, adjacency List, etc\n",
+    "image example: pixels\n",
+    "text example: List of words"
+   ]
   },
   {
    "attachments": {},
@@ -140,7 +164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -154,12 +178,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "ff4b1fca65a764b45acb559e482afe389d289dd599b9f8c5fd12ff5c2ea46a65"
    }
   }
  },
