update for lecture03

--- a/lecture_02/worksheet_02.ipynb
+++ b/lecture_02/worksheet_02.ipynb
@@ -127,38 +127,41 @@
     "    def unset_queen_on(self,row):\n",
     "         self.board[row] = [\"_\" for _ in range(8)]\n",
     "\n",
-    "    def get_queen_on(self,row):\n",
-    "        for col in range(len(self.board)):\n",
-    "            if self.board[row][col] == \"Q\":\n",
-    "                return col\n",
-    "        raise ValueError(\"programmer error\")\n",
-    "    \n",
-    "    def search(self):\n",
-    "        row = 0\n",
-    "        col = 0\n",
-    "\n",
-    "        while row >=0 :\n",
-    "            if row < 8:\n",
-    "                if self.is_legal(row,col):\n",
-    "                    self.set_queen_at(row,col)\n",
-    "                    row += 1\n",
-    "                    col = 0\n",
-    "                else:\n",
-    "                    col += 1\n",
-    "                    while col >= 8:\n",
-    "                        col = self.get_queen_on(row-1)\n",
-    "                        self.unset_queen_on(row-1)\n",
-    "                        col += 1\n",
-    "                        row -= 1\n",
-    "            else:\n",
-    "                print(\"find a solution\")\n",
-    "                print(self)\n",
-    "                while col >= 8:\n",
-    "                    col = self.get_queen_on(row-1)\n",
-    "                    self.unset_queen_on(row-1)\n",
-    "                    col += 1\n",
-    "                    row -= 1\n",
-    "            \n",
+    "    def get_queen_on(self,row):\n",
+    "        for col in range(len(self.board)):\n",
+    "            if self.board[row][col] == \"Q\":\n",
+    "                return col\n",
+    "        raise ValueError(\"programmer error\")\n",
+    " \n",
+    "    def search(self):\n",
+    "        row = 0\n",
+    "        col = 0\n",
+    "        nsol = 0\n",
+    "        while row >=0 :\n",
+    "            if row < 8: # check if need backtracking\n",
+    "                if self.is_legal(row,col):\n",
+    "                    self.set_queen_at(row,col)\n",
+    "                    row += 1\n",
+    "                    col = 0\n",
+    "                else:\n",
+    "                    col += 1\n",
+    "                    while col >= 8:\n",
+    "                        col = self.get_queen_on(row-1)\n",
+    "                        self.unset_queen_on(row-1)\n",
+    "                        col += 1\n",
+    "                        row -= 1\n",
+    "            else:\n",
+    "                nsol += 1\n",
+    "                print(\"find a solution number\", nsol)\n",
+    "                print(self)\n",
+    "                row -=1     # only do this backtracking if we in while loop\n",
+    "                col = self.get_queen_on(row)\n",
+    "                self.unset_queen_on(row) \n",
+    "                while col >= 8:\n",
+    "                    row -=1\n",
+    "                    col = self.get_queen_on(row)\n",
+    "                    self.unset_queen_on(row) \n",
+    "                    col += 1\n",
     "\n",
     "my_board = Board()\n",
     "print(my_board)\n",
