--- a/lecture_03/worksheet_03.ipynb
+++ b/lecture_03/worksheet_03.ipynb
@@ -72,7 +72,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(2,4,6) is positive example since it follow the rule of hypo (x,2x,3x);\n",
+    "(6,8,10) is negative example since it violate the rule of given hypo OR this example is not related to concerned data;\n",
+    "(1,3,5) is negative example, too."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,7 +150,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "find the customers' pattern of preference when buying goods by online shopping would be such an example since unsupervised learning is to find the structure or underlying pattern of whole dataset."
+   ]
   },
   {
    "attachments": {},
@@ -159,7 +165,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "predict the tendency between customer 's shopping habit and their annually income for online shopping would be such example since supervised learning is to find pattern between labelled data variables."
+   ]
   }
  ],
  "metadata": {
