worksheet lec04 done

--- a/lecture_04/worksheet_04.ipynb
+++ b/lecture_04/worksheet_04.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 04\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Haoxiang Huo\n",
+    "UID: U13668934\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -29,7 +29,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "p is some parameter make the formula more general, it does not necessary has some significant meaning.\n",
+    "d is parameter shows the number of dimensional in real space for points x, y."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,7 +44,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "...."
+   ]
   },
   {
    "attachments": {},
@@ -61,7 +66,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When p goes to larger and larger, the distance will be smaller and smaller. Refering to the distance formula such that Lp(x,y) = [ToSum.abs(xi-yi)]^(1/p) which ToSum sum the number for each i where i belongs to [0,d] inclusive; we observe clearly that p gets very large, the (1/p) gets very small."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +80,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No, when p <1, let us say 0 < p < 1; refer to function formula such that  Lp(x,y) = [ToSum.abs(xi-yi)]^(1/p) which ToSum sum the number for each i where i belongs to [0,d] inclusive, ........"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,7 +94,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When the direction matters more over magnitude."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,7 +108,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "For Jaccard Similarity, we need to account for the size of intersection. FOr JSim(x,y) = abs(x intersect y)/abs(x union y), be aware that x is the set of words, not binary vector representation."
+   ]
   },
   {
    "attachments": {},
@@ -111,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,15 +163,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello', 'Bob', 'is', 'name', 'my', 'Alice']\n",
-      "[1, 0, 1, 1, 1, 1]\n"
+      "['is', 'name', 'my', 'Alice', 'hello', 'Bob']\n",
+      "[1, 1, 1, 1, 1, 0]\n"
      ]
     }
    ],
@@ -179,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,10 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['is', 'name', 'hi', 'my', 'Alice', 'hello', 'Bob', 'Claude']\n"
+     ]
+    }
+   ],
+   "source": [
+    "corpus = [s1, s2, s3]\n",
+    "all_words = list(set([item for x in corpus for item in x.split()]))\n",
+    "print(all_words)\n"
+   ]
   },
   {
    "attachments": {},
@@ -211,10 +236,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 0, 1, 1, 1, 0, 0]\n",
+      "[1, 1, 0, 1, 0, 1, 1, 0]\n",
+      "[1, 1, 1, 1, 0, 0, 0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = [1 if x in s1 else 0 for x in all_words]\n",
+    "print(v1)\n",
+    "v2 = [1 if x in s2 else 0 for x in all_words]\n",
+    "print(v2)\n",
+    "v3 = [1 if x in s3 else 0 for x in all_words]\n",
+    "print(v3)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,7 +270,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def misko_dis(x,y,p):\n",
+    "    if p < 1:\n",
+    "        raise ValueError(\"p must be greater than 1\")\n",
+    "    if "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,10 +297,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['is', 'name', 'hi', 'my', 'Alice', 'hello', 'Bob', 'Claude']\n",
+      "[1, 1, 0, 1, 1, 1, 0, 0]\n",
+      "[1, 1, 0, 1, 0, 1, 1, 0]\n",
+      "[1, 1, 1, 1, 0, 0, 0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "corpus: [\"hi Alice\", \"hello Claude\", \"Bob my name is Carol\", \"hi my name is Alice\", \"hello Bob\"]\n",
+    "all_words = list(set([item for x in corpus for item in x.split()])) \n",
+    "print(all_words)\n",
+    "\n",
+    "matrix = [[1 if x in sentence else 0 for x in all_words] for sentence in corpus]\n",
+    "for vector in matrix:\n",
+    "    print(vector)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,10 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rows = len(matrix)\n",
+    "cols = len(matrix[0])"
+   ]
   },
   {
    "attachments": {},
@@ -282,7 +351,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "min = manhattan_distance(matrix[0], matrix[1])\n",
+    "vectors  = (0, 1)\n",
+    "for i in range(len(matrix)):\n",
+    "    for j in range(len(matrix)):\n",
+    "        if i!=j:\n",
+    "            manhattan_distance(matrix[i], matrix[j])\n",
+    "        if min > new_min:\n",
+    "            min = new_min\n",
+    "            vectors = (i, j)\n",
+    "print(vectors)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -292,7 +372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -306,12 +386,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "ff4b1fca65a764b45acb559e482afe389d289dd599b9f8c5fd12ff5c2ea46a65"
    }
   }
  },
