worksheet lec4 redone

--- a/lecture_04/worksheet_04.ipynb
+++ b/lecture_04/worksheet_04.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "...."
+    "The geometry diff a lot. Manhattan is grid-based, while Euclidean is straight-line."
    ]
   },
   {
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No, when p <1, let us say 0 < p < 1; refer to function formula such that  Lp(x,y) = [ToSum.abs(xi-yi)]^(1/p) which ToSum sum the number for each i where i belongs to [0,d] inclusive, ........"
+    "No, when p <1, let us say 0 < p < 1; refer to function formula such that  Lp(x,y) = [ToSum.abs(xi-yi)]^(1/p) which ToSum sum the number for each i where i belongs to [0,d] inclusive, we will found (1/p) >1 and this result violate the property of distance definition such that for point A,B,C, D(B,c) > D(B,A) + D(A,C) which make no sence."
    ]
   },
   {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,15 +163,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['is', 'name', 'my', 'Alice', 'hello', 'Bob']\n",
-      "[1, 1, 1, 1, 1, 0]\n"
+      "['my', 'hello', 'Alice', 'Bob', 'name', 'is']\n",
+      "[1, 1, 1, 0, 1, 1]\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,14 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['is', 'name', 'hi', 'my', 'Alice', 'hello', 'Bob', 'Claude']\n"
+      "['my', 'hello', 'Claude', 'Alice', 'Bob', 'name', 'hi', 'is']\n"
      ]
     }
    ],
@@ -236,16 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 0, 1, 1, 1, 0, 0]\n",
-      "[1, 1, 0, 1, 0, 1, 1, 0]\n",
-      "[1, 1, 1, 1, 0, 0, 0, 1]\n"
+      "[1, 1, 0, 1, 0, 1, 0, 1]\n",
+      "[1, 1, 0, 0, 1, 1, 0, 1]\n",
+      "[1, 0, 1, 0, 0, 1, 1, 1]\n"
      ]
     }
    ],
@@ -267,14 +267,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "4.0\n",
+      "4.0\n"
+     ]
+    }
+   ],
    "source": [
-    "def misko_dis(x,y,p):\n",
+    "def minkowski_dis(x,y,p):\n",
     "    if p < 1:\n",
     "        raise ValueError(\"p must be greater than 1\")\n",
-    "    if "
+    "    if len(x)!=len(y):\n",
+    "        raise ValueError(\"x and y must be of the same dimension space\")\n",
+    "    res = 0\n",
+    "    for i in range(len(x)):\n",
+    "        res += abs(x[i]-y[i])**p\n",
+    "    return res**(1/p)\n",
+    "def manhattan_dis(x,y):\n",
+    "    return minkowski_dis(x,y,1)\n",
+    "\n",
+    "print(manhattan_dis(v1,v2))\n",
+    "print(manhattan_dis(v1,v3))\n",
+    "print(manhattan_dis(v2,v3))\n",
+    "    "
    ]
   },
   {
@@ -297,17 +319,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['is', 'name', 'hi', 'my', 'Alice', 'hello', 'Bob', 'Claude']\n",
-      "[1, 1, 0, 1, 1, 1, 0, 0]\n",
-      "[1, 1, 0, 1, 0, 1, 1, 0]\n",
-      "[1, 1, 1, 1, 0, 0, 0, 1]\n"
+      "['my', 'hello', 'Claude', 'Alice', 'Bob', 'name', 'hi', 'is']\n",
+      "[1, 1, 0, 1, 0, 1, 0, 1]\n",
+      "[1, 1, 0, 0, 1, 1, 0, 1]\n",
+      "[1, 0, 1, 0, 0, 1, 1, 1]\n"
      ]
     }
    ],
@@ -330,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,20 +370,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The most similar sentences are at indices (0, 1) with a Manhattan distance of 2.\n"
+     ]
+    }
+   ],
    "source": [
-    "min = manhattan_distance(matrix[0], matrix[1])\n",
-    "vectors  = (0, 1)\n",
+    "# min = manhattan_distance(matrix[0], matrix[1])\n",
+    "# vectors  = (0, 1)\n",
+    "# for i in range(len(matrix)):\n",
+    "#     for j in range(len(matrix)):\n",
+    "#         if i!=j:\n",
+    "#             manhattan_distance(matrix[i], matrix[j])\n",
+    "#         if min > new_min:\n",
+    "#             min = new_min\n",
+    "#             vectors = (i, j)\n",
+    "# print(vectors)\n",
+    "\n",
+    "def manhattan_distance(v1, v2):\n",
+    "    return sum(abs(a - b) for a, b in zip(v1, v2))\n",
+    "\n",
+    "min_distance = float('inf')  # Start with \"infinity\" as the initial minimum\n",
+    "vectors = (0, 0)\n",
+    "\n",
     "for i in range(len(matrix)):\n",
-    "    for j in range(len(matrix)):\n",
-    "        if i!=j:\n",
-    "            manhattan_distance(matrix[i], matrix[j])\n",
-    "        if min > new_min:\n",
-    "            min = new_min\n",
+    "    for j in range(i+1, len(matrix)):  # j starts from i+1 to avoid comparing the same vectors\n",
+    "        distance = manhattan_distance(matrix[i], matrix[j])\n",
+    "        if distance < min_distance:\n",
+    "            min_distance = distance\n",
     "            vectors = (i, j)\n",
-    "print(vectors)"
+    "\n",
+    "print(f\"The most similar sentences are at indices {vectors} with a Manhattan distance of {min_distance}.\")\n"
    ]
   },
   {
