lecture05 worksheet done

--- a/lecture_05/worksheet_05.ipynb
+++ b/lecture_05/worksheet_05.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 05\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Haoxiang Huo\n",
+    "UID: U13668934\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -58,7 +58,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The cost function for k-means measures how far data points are from the center of their assigned clusters. It's a way to gauge how well the points fit within their clusters. The goal of the k-means algorithm is to minimize this cost function, meaning we want to make sure that data points are as close as possible to the center of their respective clusters. If all the data points are right at the center of their clusters, the cost would be zero, which would be an ideal scenario. But in most cases, points are spread out, and the cost function helps us understand how spread out they are."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +72,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The order in which data points are processed might affect the clustering outcome, especially in online or mini-batch versions of k-means. On the other hand, if the data isn't well-separated or if there are no clear cluster boundaries, k-means can produce different clustering results. This is especially true if the number of specified clusters (K) doesn't align well with the actual structure in the data."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,7 +86,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Yes, always converge. The objective of Lloyd's algorithm (or k-means) is to minimize the sum of squared distances from each point to its assigned centroid. In each step of the algorithm, either:\n",
+    "\n",
+    "a) A point's assignment to a centroid changes, which means that the distance to its new centroid is shorter than the distance to its old centroid. This ensures a decrease in the overall cost.\n",
+    "\n",
+    "Or, \n",
+    "b) the centroids are recalculated, which by definition will be at the mean of its assigned points, minimizing the sum of squared distances for that cluster.\n",
+    "\n",
+    "Given that there's a finite number of possible ways to assign data points to centroids, and in each step the overall cost either decreases or remains the same, the algorithm will eventually reach a point where no further improvement is possible, ensuring convergence."
+   ]
   },
   {
    "attachments": {},
@@ -114,6 +127,9 @@
     "        self.assignment = [-1 for _ in range(len(data))]\n",
     "        self.snaps = []\n",
     "    \n",
+    "    def distance(self, x, y):\n",
+    "        return np.linalog.norm(x - y)\n",
+    "    \n",
     "    def snap(self, centers):\n",
     "        TEMPFILE = \"temp.png\"\n",
     "\n",
@@ -124,9 +140,44 @@
     "        plt.close()\n",
     "        self.snaps.append(im.fromarray(np.asarray(im.open(TEMPFILE))))\n",
     "\n",
-    "\n",
+    "    def initialize(self):\n",
+    "        return self.data[np.random.choice(range(len(self.data)), self.k, replace=False)]\n",
+    "    \n",
+    "    def assign(self, centers):\n",
+    "        for i in range(len(self.data)):\n",
+    "            min = self.distance(centers[0], self.data[i])\n",
+    "            self.assignment[i] = 0\n",
+    "            for j in range(1, len(centers)):\n",
+    "                dist = self.distance(centers[j], self.data[i])\n",
+    "                if dist < min:\n",
+    "                    min = dist\n",
+    "                    self.assignment[i] = j\n",
+    "        return \n",
+    "    \n",
+    "    def is_diff_clusters(self,centers, new_centers):\n",
+    "        for i in range(len(centers)):\n",
+    "            if self.distance(centers[i], new_centers[i]) != 0:\n",
+    "                return True\n",
+    "        return False\n",
+    "    \n",
+    "    def get_centers(self):\n",
+    "        centers = []\n",
+    "        for i in set(self.assignment):\n",
+    "            clusters = [self.data[j] for j in range(len(self.data)) if self.assignment[j] == i]\n",
+    "            centers.append(np.mean(clusters, axis=0))\n",
+    "        return np.array(centers)\n",
+    "    \n",
+    "    \n",
     "    def lloyds(self):\n",
-    "        ...\n",
+    "        centers = self.initialize()\n",
+    "        self.assign(centers)\n",
+    "        self.snap(centers)\n",
+    "        new_centers = self.get_centers()\n",
+    "        while self.is_diff_clusters(centers, new_centers):\n",
+    "            self.assign(new_centers)\n",
+    "            self.snap(new_centers)\n",
+    "            centers = new_centers.copy()\n",
+    "            new_centers = self.get_centers()\n",
     "        return\n",
     "            \n",
     "\n",
