update lec05 worksheet

--- a/lecture_05/worksheet_05.ipynb
+++ b/lecture_05/worksheet_05.ipynb
@@ -40,13 +40,28 @@
     "\n",
     "Given the initial centroids:\n",
     "\n",
-    "`[0, 2]`"
+    "`[0, 2]`\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Iteration 1:\n",
+    "Assignments: {0, 0.5} and {1.5, 2, 6, 6.5, 7};\n",
+    "Updated centroids: [0.25, 4.4];\n",
+    "\n",
+    "Iteration 2:\n",
+    "Assignments: {0, 0.5, 1.5, 2} and {6, 6.5, 7};\n",
+    "Updated centroids: [1, 6.5];\n",
+    "\n",
+    "Iteration 3:\n",
+    "Assignments don't change from Iteration 2 and centroids remain [1, 6.5]. Algorithm converges.\n",
+    "\n",
+    "Final Clusters:\n",
+    "Cluster 1: [0, .5, 1.5, 2];\n",
+    "Cluster 2: [6, 6.5, 7]"
+   ]
   },
   {
    "cell_type": "markdown",
