update lec06 worksheet

--- a/lecture_06/worksheet_06.ipynb
+++ b/lecture_06/worksheet_06.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 06\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Haoxiang Huo\n",
+    "UID: U13668934\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -23,7 +23,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "On one hand, K means is randomly pick the next centroid; on the other hand, K means ++ refer to randomly pick next centroid which is proportional to the distance."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,7 +37,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "K means ++ is sensitive to outliers and cluster K should be specified."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +72,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I would choose 2 or 3 clusters since the red line average silhouette score for those histogram is higher and clusters are more separated than others."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,6 +101,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# single-link distance --> d-min (point 1 from C1, point2 from C2) --> might plot chain cluster \\n\n",
+    "# e.x. A->B, C; B is the closest(single), C is the farthest(complete) \\n\n",
+    "# complete-link distance --> d-max(point1 from C1, point2 from C2) \\n\n",
+    "# => However, components with 'the Smallest' distance will be merged."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -102,11 +120,11 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 | sqrt(2)  | 3  | 1  | 2*sqrt(2)  |\n",
+    "| B | sqrt(2)  | 0 | sqrt(5)  | 1  | sqrt(2) |\n",
+    "| C |3   | sqrt(5)  | 0 | sqrt(10)  |sqrt(5)   |\n",
+    "| D | 1  | 1  |sqrt(10)   | 0 | sqrt(5)  |\n",
+    "| E |2sqrt(2)   | sqrt(2)  | sqrt(5)  |sqrt(5)   | 0 |"
    ]
   },
   {
@@ -115,12 +133,12 @@
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   | AD  | B  | C  | E  |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "| AD  | 0 | 1  | 3  | sqrt(5)  |\n",
+    "| B  | 1  | 0 | sqrt(5)  |sqrt(2)   |\n",
+    "| C |  3 |  sqrt(5) | 0 | sqrt(5)  |\n",
+    "| E  | sqrt(5)  |sqrt(2)   | sqrt(5)  | 0 |"
    ]
   },
   {
@@ -129,11 +147,11 @@
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   |ADB   | C  |E|\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "| ADB  | 0 | sqrt(5)  |sqrt(2)   |\n",
+    "|  C | sqrt(5)  | 0 |sqrt(5)   |\n",
+    "|  E | sqrt(2)  |  sqrt(5) | 0 |"
    ]
   },
   {
@@ -142,10 +160,10 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   | ABDE  | C  |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "| ABDE  | 0 |  sqrt(5) |\n",
+    "| C  | sqrt(5)  | 0 |"
    ]
   },
   {
@@ -166,11 +184,11 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 | sqrt(2)  | 3  |1   |2sqrt(2)   |\n",
+    "| B | sqrt(2)  | 0 | sqrt(5)  |1   | sqrt(2)  |\n",
+    "| C | 3  | sqrt(5)  | 0 | sqrt(10)  | sqrt(5)  |\n",
+    "| D |  1 | 1  | sqrt(10)  | 0 |sqrt(5)  |\n",
+    "| E | 2sqrt(2)  | sqrt(2)  |sqrt(5)   | sqrt(5)  | 0 |"
    ]
   },
   {
@@ -179,12 +197,12 @@
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   | AD  | B  | C  | E  |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "|AD   | 0 | sqrt(2)  | sqrt(10)  | 2sqrt(2)  |\n",
+    "| B  |sqrt(2)   | 0 | sqrt(5)  | sqrt(2)  |\n",
+    "|  C | sqrt(10)  | sqrt(5)  | 0 |sqrt(5)   |\n",
+    "|  E |  2sqrt(2) | sqrt(2)  | sqrt(5)  | 0 |"
    ]
   },
   {
@@ -193,11 +211,11 @@
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   | ADB  | C  |  E |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|ADB   | 0 | sqrt(10)  | 2sqrt(2)  |\n",
+    "| C  | sqrt(10)  | 0 | sqrt(5)  |\n",
+    "| E  | 2sqrt(2)  |  sqrt(5) | 0 |"
    ]
   },
   {
@@ -206,10 +224,10 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   | ADBE  |  C |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "| ADBE  | 0 | sqrt(10)  |\n",
+    "| C  | sqrt(10)  | 0 |"
    ]
   }
  ],
