--- a/lecture_13/worksheet_13.ipynb
+++ b/lecture_13/worksheet_13.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 13\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Haoxiang Huo\n",
+    "UID: U13668934\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -58,7 +58,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No\n"
+   ]
   },
   {
    "attachments": {},
@@ -70,13 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "data = np.genfromtxt(fname='./dataset.tsv', delimiter = '\\t', names = True)"
+    "data = np.genfromtxt(fname='./dataset.tsv', delimiter = '\\t', names = True)\n",
+    "# In high level for understanding of Hunt alg, question for makeing decision tree\n",
+    "# is to ask \"what attribute should be used to split the data?\" and \"how to split the data?\"\n",
+    "# example: \"why we split single and divorced of  marital status in same group while married as the other alone? why not split three each other?\" \n",
+    "# try to understand the data and how is way of spliting the data impact on the result"
    ]
   },
   {
@@ -96,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 0. 1. 1. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 0. 1. 0. 0. 1. 0. 0. 0. 0. 1.\n",
+      "[1. 0. 0. 0. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 1. 1. 0. 0. 1. 0. 0. 0. 0. 0.\n",
       " 0. 1. 1. 1.]\n"
      ]
     }
@@ -114,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,9 +133,10 @@
    ],
    "source": [
     "def gini(node):\n",
+    "    # Defition: lower Gini index is more desirable, recall formula: GINI(t) = 1 - sum[(frequency of each class in t)^2]= 1- sum[(p(j|t))^2]\n",
     "    frequencies = [\n",
-    "        ...,\n",
-    "        ...\n",
+    "        sum(node)/len(node),\n",
+    "        (len(node)-sum(node))/len(node)\n",
     "    ]\n",
     "    return 1 - sum([f**2 for f in frequencies])\n",
     "\n",
@@ -146,26 +153,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GINI of split on thalassemia =  0.13265306122448983\n",
-      "GINI of split on chest_pain =  0.5625\n"
+      "GINI of split on thalassemia =  0.23469387755102047\n",
+      "GINI of split on chest_pain =  0.4419642857142857\n"
      ]
     }
    ],
    "source": [
     "def gini_split(data, attr, target_name):\n",
-    "    ginis = [\n",
-    "        ...,\n",
-    "        ...\n",
+    "    # recall ppt page 43 that GINI of the split; we want to create 2 node, one from\n",
+    "    split = [\n",
+    "        data[data[attr] == 1][target_name], data[data[attr] == 0][target_name] # pesudoce version, may not work\n",
     "    ]\n",
     "\n",
-    "    return ...\n",
+    "    return sum( [len(node) *  gini(node) for node in split] ) / len(data)\n",
     "\n",
     "print(\"GINI of split on thalassemia = \", gini_split(data, \"thalassemia\", \"heart_disease\"))\n",
     "print(\"GINI of split on chest_pain = \", gini_split(data, \"chest_pain\", \"heart_disease\"))"
@@ -181,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -280,15 +287,15 @@
     }
    ],
    "source": [
-    "def predict(tree : Node, example):\n",
+    "def predict(tree : Node, example): # build recursive function to predict the result until we reach the leaf that left and right child is null\n",
     "    if tree.left is None and tree.right is None:\n",
-    "        ...\n",
+    "        return tree.vote\n",
     "    \n",
     "    if example[tree.attr] == 0:\n",
-    "        ...\n",
+    "        return predict(tree.left, example)  # look at the next node in the tree, hofully eventually we reach the leaf\n",
     "\n",
     "    if example[tree.attr] == 1:\n",
-    "        ...\n",
+    "        return predict(tree.right, example)\n",
     "\n",
     "    return 0\n",
     "\n",
@@ -308,15 +315,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_best_attribute(data, target_name):\n",
     "    best_attr = None\n",
+    "    smallest_gini = float('inf')  # Set initial value to infinity\n",
     "    for attr in data.dtype.names:\n",
     "        if attr != target_name:\n",
-    "            ...\n",
+    "            # ...\n",
+    "            gini_index = gini_split(data, attr, target_name)\n",
+    "            if gini_index < smallest_gini:\n",
+    "                smallest_gini = gini_index\n",
+    "                best_attr = attr\n",
     "    return best_attr"
    ]
   },
@@ -330,24 +342,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "thalassemia = 0: \n",
-      "| chest_pain = 0: \n",
-      "| | vote = 0\n",
-      "| chest_pain = 1: \n",
-      "| | vote = 0\n",
-      "thalassemia = 1: \n",
-      "| chest_pain = 0: \n",
-      "| | vote = 1\n",
-      "| chest_pain = 1: \n",
-      "| | vote = 1\n",
-      "\n"
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 95\u001b[0m\n\u001b[0;32m     91\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtree \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuild_tree(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_depth)\n\u001b[0;32m     94\u001b[0m simple_tree \u001b[38;5;241m=\u001b[39m SimpleDecisionTree(\u001b[38;5;241m2\u001b[39m, data, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mheart_disease\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 95\u001b[0m \u001b[43msimple_tree\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     96\u001b[0m \u001b[38;5;28mprint\u001b[39m(simple_tree)\n",
+      "Cell \u001b[1;32mIn[15], line 91\u001b[0m, in \u001b[0;36mSimpleDecisionTree.train\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     88\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_depth \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mdtype\u001b[38;5;241m.\u001b[39mnames) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     90\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdefault_class \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_majority_vote(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata)\n\u001b[1;32m---> 91\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtree \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbuild_tree\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmax_depth\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[15], line 65\u001b[0m, in \u001b[0;36mSimpleDecisionTree.build_tree\u001b[1;34m(self, data, depth)\u001b[0m\n\u001b[0;32m     64\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mbuild_tree\u001b[39m(\u001b[38;5;28mself\u001b[39m, data, depth):        \n\u001b[1;32m---> 65\u001b[0m     attr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_best_attribute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     66\u001b[0m     node \u001b[38;5;241m=\u001b[39m Node(attr)\n\u001b[0;32m     68\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m depth \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "Cell \u001b[1;32mIn[15], line 57\u001b[0m, in \u001b[0;36mSimpleDecisionTree.get_best_attribute\u001b[1;34m(self, data)\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m attr \u001b[38;5;129;01min\u001b[39;00m data\u001b[38;5;241m.\u001b[39mdtype\u001b[38;5;241m.\u001b[39mnames:\n\u001b[0;32m     56\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attr \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_name:\n\u001b[1;32m---> 57\u001b[0m         gini_index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgini_split\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mattr\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     58\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m gini_index \u001b[38;5;241m<\u001b[39m smallest_gini:\n\u001b[0;32m     59\u001b[0m             smallest_gini \u001b[38;5;241m=\u001b[39m gini_index\n",
+      "Cell \u001b[1;32mIn[15], line 40\u001b[0m, in \u001b[0;36mSimpleDecisionTree.gini_split\u001b[1;34m(self, data, attr)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgini_split\u001b[39m(\u001b[38;5;28mself\u001b[39m, data, attr):\n\u001b[0;32m     39\u001b[0m     split \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_subset(data, attr)\n\u001b[1;32m---> 40\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msum\u001b[39m(\u001b[43m[\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnode\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgini\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnode\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_name\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mnode\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43msplit\u001b[49m\u001b[43m]\u001b[49m) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(data)\n",
+      "Cell \u001b[1;32mIn[15], line 40\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgini_split\u001b[39m(\u001b[38;5;28mself\u001b[39m, data, attr):\n\u001b[0;32m     39\u001b[0m     split \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_subset(data, attr)\n\u001b[1;32m---> 40\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msum\u001b[39m([\u001b[38;5;28mlen\u001b[39m(node) \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgini(\u001b[43mnode\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_name\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m) \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m split]) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(data)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'values'"
      ]
     }
    ],
@@ -371,17 +382,48 @@
     "        subset_2 = data[data[attr] == 1]\n",
     "        return subset_1, subset_2\n",
     "\n",
+    "    def gini(self, node):\n",
+    "        # revise from above for this class\n",
+    "        if len(node) == 0:\n",
+    "            return 0\n",
+    "        frequencies = [\n",
+    "            np.sum(node) / len(node),\n",
+    "            (len(node) - np.sum(node)) / len(node)\n",
+    "        ]\n",
+    "        return 1 - np.sum([f ** 2 for f in frequencies if f != 0])\n",
     "\n",
+    "    # def gini_split(self, data, attr):\n",
+    "    #     # already implemented above\n",
+    "    #     split = [\n",
+    "    #         data[data[attr] == 1][self.target_name],\n",
+    "    #         data[data[attr] == 0][self.target_name]\n",
+    "    #     ]\n",
+    "    #     return np.sum([len(node) * self.gini(node) for node in split]) / len(data)\n",
+    "    \n",
     "    def gini_split(self, data, attr):\n",
-    "        ...\n",
+    "        split = self.get_subset(data, attr)\n",
+    "        return sum([len(node) * self.gini(node[self.target_name].values) for node in split]) / len(data)\n",
+    "\n",
     "\n",
     "\n",
     "    def get_majority_vote(self, data):\n",
-    "        ...\n",
+    "        # alreay implemented above\n",
+    "        counts = np.bincount(data[self.target_name].astype(int))  # Ensure the data is of integer type\n",
+    "        return np.argmax(counts)\n",
     "\n",
     "\n",
     "    def get_best_attribute(self, data):        \n",
-    "        ...\n",
+    "        # alreay implemented above\n",
+    "        best_attr = None\n",
+    "        smallest_gini = float('inf')\n",
+    "\n",
+    "        for attr in data.dtype.names:\n",
+    "            if attr != self.target_name:\n",
+    "                gini_index = self.gini_split(data, attr)\n",
+    "                if gini_index < smallest_gini:\n",
+    "                    smallest_gini = gini_index\n",
+    "                    best_attr = attr\n",
+    "        return best_attr\n",
     "\n",
     "\n",
     "    def build_tree(self, data, depth):        \n",
@@ -422,7 +464,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -436,12 +478,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "ff4b1fca65a764b45acb559e482afe389d289dd599b9f8c5fd12ff5c2ea46a65"
    }
   }
  },
